0.6.0 - currently working on
- [#2898] Feature: Add a function mapper::getLoadedTestingModel
- [#2751] Feature: Support bidirectional relations
- [#2886] Change: Refactor the creation of the cObj in the templatehelper
- [#2883] Feature: Add a function to tx_oelib_List to purge elements from the list
- [#2882] Feature: Add a function to tx_oelib_List to append a list to another list
- [#2826] Feature: Add an interface "address" and use it for the realty object model
- [#2749] Feature: Add a function for sorting list by providing a comparison function
- [#2325] Fix: SQL errors in tx_oelib_testingFramework_testcase with TYPO3 4.3
- [#2794] Feature: Add a function FrontEndUserMapper::getGroupMembers
- [#2482] Feature: Support 1:n relations (compositions)
- [#1841] Feature: Add functions in the testing framework to create dummy ZIP archives
- [#2588] Fix: Creating a fake FE must set the FE user status to "logged out"
- [#2788] Change: Allow login of FE user models which are not in database with the testingFramework
- [#2680] Feature: Add datamapper::save
- [#2797] Feature: Add getDescription() to the FE group model
- [#2228] Feature: Add a DB-less mode/testing mode to the mappers
- [#2474] Feature: Add functions FrontEndUser::hasGroupUids
- [#2471] Feature: Mappers should be able to return a result list for an array of arrays with model data
- [#2764] Feature: Add internal functions for the DataMapper to create models from arrays of data
- [#2767] Feature: Add a "readOnly" flag to models
- [#2771] Feature: Add function setToDeleted to the model
- [#2766] Feature: Add country model and mapper
- [#2679] Feature: Track the dirty/clean state of models
- [#2755] Fix: BE user mapper needs to lowercase the CLI user before DB search
- [#2737] Fix: set on a ghost should load the object
- [#2460] Feature: Add a m:n table mapper
- [#2725] Feature: Add a BE user class
- [#2728] Feature: The testing framework should create BE users