@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2915] Fix: The CLI module also selects deleted FE users
 - [#2898] Feature: Add a function mapper::getLoadedTestingModel
 - [#2751] Feature: Support bidirectional relations
 - [#2886] Change: Refactor the creation of the cObj in the templatehelper
